k8s/308_platform_gateway-api/httproute-httpbin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: platform
spec:
  parentRefs:
  - name: platform-gateway
  hostnames:
  - __HTTPBIN_HOST__
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 80
