k8s/308_platform_gateway-api/httproute-whoami.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: platform
spec:
  parentRefs:
  - name: platform-gateway
  hostnames:
  - __WHOAMI_HOST__
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: whoami
      port: 80
